--- a/style_1.css
+++ b/style_1.css
@@ -1,20 +1,93 @@
 html{
-    font-family: "Microsoft YaHei", sans-serif, Verdana;
+    font-family: Verdana;
 }
 body{
-    width: 90%;
-    max-width: 900px;
+    margin: 0;
+    /*最上方可能有空白，为什么*/
+}
+header{
+    background-color: 	#282828; 
+    width: 100%;
+}
+.header {
+    margin: 0 auto;
+    width: 960px;
+    color: white;
+    height: 70px;
+    display: block;
+    /*!!!!因为absolute的父元素div需要设定个啥，才能保证right是在夫元素内，而不是HTML*/
+}
+.header h1{
+    left: 0;
+    line-height: 70px;
+}
+.header p{
+    position: absolute;
+    top: 0;
+    right: 20px;
+}
+a:link {
+    color: white;
+}
+.banner {
+    width: 100%;
+    height: 200px;
+    background-color: #228B22;
+}
+.num {
+    width: 960px;
     margin: 0 auto;
 }
-p{
-    line-height: 1.5;
-    margin: 25px 0;
-}
-.msg,
-.tec {
+.num li{
     float: left;
-    padding: 0px 40px 0px 0px;
+    list-style-type: none;
+    border: 1px solid black;
+    font-size: 15px;
+    margin: 5px;
+    padding: 5px;
+    background-color: #99FF99;
+}
+/*怎么把1234放到右下角*/
+.guid {
+    width: 100%;
+}
+.chose {
+    width: 960px;
+    margin: 0 auto;
+}
+.chose li{
+    float: left;
+    list-style-type: none;
+    /*border: 1px solid black;
+    border-bottom: none;
+    线咋整*/
+    font-size: 15px;
+    border: 1px solid black;
+    width: 90px;
+    background-color: #778899;
+    text-align: center;
+    margin-top: 10px;
+}
+.one {
+    width: 960px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+}
+article{
+    margin-top: 5px;
+    border: 1px solid black;
+    text-align: center;
+    padding: 80px;
+}
+.alot {
+    display: -webkit-inline-box;
+    padding: 100px;
 }
 .clearfix {
-    clear: both;
+    display: table;
+    clear: left;
+    overflow: auto;
 }
